--- a/html/main.css
+++ b/html/main.css
@@ -27,7 +27,7 @@ li {
 body {
     font-family: "museo-sans-rounded", sans-serif;
     font-weight: 300;
-    background-color: #e9e5cd;
+    background-color: #000000;
 }
 
 p {
